@@ -1,3 +1,7 @@
+2007-06-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b69
+
+ * Fix: Don't show empty tooltips in thumbsview.
+
 2007-06-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b68
 
  * NEW: Its now possible to resize the orginal version.
